# MokaECS

./: CMakeLists.txt
inc/moka/ecs/core/: component.h  component_ptr.hpp  defines.h  ecs.hpp  macros.hpp  system.hpp
inc/moka/ecs/wrappers/: signal_wrapper.hpp
src/moka/ecs/core/: ecs.cpp
tests/: test_basic.cpp  test_extreme.cpp  test_signals.cpp
